# ray-tracer

./: .drone.yml  .gitignore  CMakeLists.txt  assignment-01.cmake  assignment-02.cmake  assignment-03.cmake  assignment-04.cmake  assignment-05.cmake  assignment-06-merge.cmake  assignment-bmap.cmake
b2/: CMakeCache.txt  Makefile  cgray  cmake_install.cmake
b2/models/: teapot.mtl
b3/: CMakeCache.txt  Makefile  cgray  cmake_install.cmake
b3/models/: Wooden_Table.mtl  cow.mtl  teapot.mtl
b4/: CMakeCache.txt  Makefile  cgray  cmake_install.cmake
core/: assert.h  color.cpp  color.h  float4.cpp  float4.h  image.cpp  image.h  interpolate-impl.h  interpolate.cpp  interpolate.h  julia.cpp  julia.h  macros.h  matrix.cpp  matrix.h  point.cpp  point.h  random.cpp  random.h  scalar.cpp  scalar.h  vector.cpp  vector.h
main/: a_bump.cpp  a_cameras.cpp  a_distributed.cpp  a_indexing.cpp  a_instancing.cpp  a_julia.cpp  a_lighting.cpp  a_local.cpp  a_mappers.cpp  a_materials.cpp  a_renderingcompetition.cpp  a_scene.cpp  a_smooth.cpp  a_solids.cpp  a_textures.cpp  main.cpp
models/: bread_french.mtl  fl2.mtl  glass_empty_filled.mtl  table.mtl  teapot_2obj.mtl  vase.mtl  wall.mtl  wall2.mtl  wooden_table.mtl
models/coffeecup/: coffeecup.mtl
rt/: bbox.cpp  bbox.h  intersection.cpp  intersection.h  motionblur.h  primitive.h  ray.cpp  ray.h  renderer.cpp  renderer.h  world.h
rt/cameras/: camera.h  dofperspective.cpp  dofperspective.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
rt/coordmappers/: coordmapper.h  cylindrical.cpp  cylindrical.h  environment.cpp  environment.h  plane.cpp  plane.h  spherical.cpp  spherical.h  tmapper.cpp  tmapper.h
rt/coordmappers 2/: coordmapper.h  cylindrical.cpp  cylindrical.h  plane.cpp  plane.h  spherical.cpp  spherical.h  tmapper.cpp  tmapper.h  world.cpp  world.h
rt/groups/: bvh.cpp  bvh.h  group.h  kdtree.h  simplegroup.cpp  simplegroup.h
rt/integrators/: casting.cpp  casting.h  castingdist.cpp  (+6 more)
website/: index.html
(+65 files in other folders)
